Popup: Correctly close behind modal

--- a/src/core/components/popup/popup.less
+++ b/src/core/components/popup/popup.less
@@ -66,6 +66,9 @@
     }
     &.popup-behind {
       transform: translate3d(0, 0, 0) scale(0.9);
+      &.modal-out {
+        transform: translate3d(0, 100vh, 0) scale(0.9);
+      }
     }
   }
 }
@@ -161,12 +164,19 @@ html.with-modal-popup-push {
 
   .popup-behind {
     transform: translate3d(0, 0px, 0px) scale(var(--f7-popup-push-scale, 1));
+    &.modal-out {
+      transform: translate3d(0, 100vh, 0) scale(var(--f7-popup-push-scale, 1));
+    }
     &:not(.popup-push) {
       border-radius: var(--f7-popup-push-border-radius) var(--f7-popup-push-border-radius) 0 0;
     }
     &.popup-push {
       transform: translate3d(0, calc(0px - var(--f7-popup-push-offset) - 10px), 0px)
         scale(var(--f7-popup-push-scale, 1));
+      &.modal-out {
+        transform: translate3d(0, calc(0px - var(--f7-popup-push-offset) - 10px + 100vh), 0px)
+          scale(var(--f7-popup-push-scale, 1));
+      }
     }
     &:after {
       opacity: 1;
